tests/ui/boolean_enforcement/fail/case_when_int_condition.stderr
error[E0277]: `Int4` is not a boolean SQL type
  --> tests/ui/boolean_enforcement/fail/case_when_int_condition.rs:15:15
   |
15 |         .when(user.age, "result");
   |          ---- ^^^^^^^^ logical operations require a boolean-typed expression
   |          |
   |          required by a bound introduced by this call
   |
   = help: the trait `BooleanLike` is not implemented for `Int4`
help: the following other types implement trait `BooleanLike`
  --> types/src/sql/mod.rs
   |
   | impl BooleanLike for crate::sqlite::types::Integer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::ddl::sqlite::types::Integer`
...
   | impl BooleanLike for crate::postgres::types::Boolean {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::postgres::types::Boolean`
note: required by a bound in `CaseInit::<'a, V>::when`
  --> core/src/expr/case.rs
   |
   |     pub fn when<C, R>(
   |            ---- required by a bound in this associated function
...
   |         C::SQLType: BooleanLike,
   |                     ^^^^^^^^^^^ required by this bound in `CaseInit::<'a, V>::when`
